Added spys, added plugins for integration and unit tests